@startuml MessageBrokerComponent
' MessageBroker_component.puml
' Architecture: Pure Message Infrastructure (Persistence Layer)
' Tactic: Message-Based, Passive Redundancy, Use an Intermediary
' DD-02, DD-04, DD-07: Event-Driven Integration between services

package "Interface Layer" {
  interface IMessagePublisherService
  interface IMessageSubscriptionService
  
  component MessagePublisherApi
  component MessageSubscriptionApi
  
  IMessagePublisherService -- MessagePublisherApi
  IMessageSubscriptionService -- MessageSubscriptionApi
}

package "Business Layer" {
  interface ITopicRegistry
  interface IEventPublisher
  interface ISubscriptionManager
  interface IRoutingKeyResolver
  interface IMessageSerializer
  
  component TopicRegistry
  component EventPublisher
  component SubscriptionManager
  component RoutingKeyResolver
  component MessageSerializer
  component MessageBrokerCoordinator
  
  ITopicRegistry -- TopicRegistry
  IEventPublisher -- EventPublisher
  ISubscriptionManager -- SubscriptionManager
  IRoutingKeyResolver -- RoutingKeyResolver
  IMessageSerializer -- MessageSerializer
  
  MessageBrokerCoordinator ..( ITopicRegistry : <<Local>>
  MessageBrokerCoordinator ..( IEventPublisher : <<Local>>
  MessageBrokerCoordinator ..( ISubscriptionManager : <<Local>>
  
  EventPublisher ..( IRoutingKeyResolver : <<Local>>
  EventPublisher ..( IMessageSerializer : <<Local>>
  
  SubscriptionManager ..( ITopicRegistry : <<Local>>
  SubscriptionManager ..( IMessageSerializer : <<Local>>
}

package "System Interface Layer" {
  interface IRabbitMQConnection
  interface IMessageQueueAdapter
  
  component RabbitMQConnectionPool
  component RabbitMQAdapter
  queue MessageQueue
  
  IRabbitMQConnection -- RabbitMQConnectionPool
  IMessageQueueAdapter -- RabbitMQAdapter
  
  RabbitMQAdapter ..( MessageQueue : <<AMQP>>
}

' Package external connections
MessagePublisherApi ..( MessageBrokerCoordinator : <<Local>>
MessageSubscriptionApi ..( MessageBrokerCoordinator : <<Local>>

EventPublisher ..( IMessageQueueAdapter : <<AMQP>>
SubscriptionManager ..( IMessageQueueAdapter : <<AMQP>>
RabbitMQAdapter ..( IRabbitMQConnection : <<Local>>

note right of MessageBrokerCoordinator
  **Tactic: Use an Intermediary**
  - Decouples publishers from subscribers
  - Supports Passive Redundancy (DD-02)
  - Queue persistence for message durability
  
  **Key Events:**
  • TaskSubmittedEvent (Helper → AITaskAnalysisConsumer)
  • TaskConfirmedEvent (Helper → RewardUpdateConsumer)
  • BranchPreferenceCreatedEvent (Search → PreferenceMatchConsumer)
  • EquipmentFaultEvent (Monitor → NotificationDispatcher)
  • BranchInfoCreatedEvent (BranchOwner → PreferenceMatchConsumer)
end note

legend right
  **Message Broker: Pure Infrastructure**
  - No business logic or data storage
  - Consumers reside in their owning services
  - Repositories managed by respective services
  - DD-03: Database per Service maintained
end legend

@enduml
